clusters/staging/my-system/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  Namespace: my-system
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  Namespace: my-system
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
